--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <button id="record-out">Record Out</button>
     <div id="record-display"></div>
     <script src="js/app.js"></script>
+    <script src="js/indexeddb.js"></script>
 </body>
 </html>
