--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Attendance Record</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="/manifest.json">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZWdESJaGEyPEPlpJ_7cXfxzpwM5EfqVQ"></script>
 </head>
 <body>
     <h1>Attendance Record</h1>
