--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Attendance Record</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="/manifest.json">
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script> <!-- Tambahkan ini -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZWdESJaGEyPEPlpJ_7cXfxzpwM5EfqVQ"></script> <!-- Tambahkan ini -->
 </head>
 <body>
     <h1>Attendance Record</h1>
