--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Attendance Record</h1>
+    <div id="clock"></div>
     <div id="map"></div>
     <div id="info-box">
         <p id="info-type"></p>
