--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <div id="record-display"></div>
     <script src="js/app.js"></script>
     <script src="js/indexeddb.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7LKSw-TACarKGrA6dmD8JZD-kCdXETuk&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7LKSw-TACarKGrA6dmD8JZD-kCdXETuk&callback=initMap" async defer></script>
 </body>
 </html>
